link styling fix for dark mode

--- a/_sass/dark-mode.scss
+++ b/_sass/dark-mode.scss
@@ -2,6 +2,11 @@
   background-color: $color-black-active;
   color: $color-white-70;
 
+  a {
+    color: $color-accent;
+  }
+
+
   // Top Nav
   .top-nav {
     background-color: $color-black-active;
